# ShapeteamAPI

./: .coveragerc  .env.example  .gitignore  README.md  build.sh  manage.py  pserver  pyproject.toml  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/: FUNDING.yml
api/chat/: consumers.py  routing.py  urls.py  views.py
api/shapeteam/: apps.py  models.py  serializers.py  urls.py  views.py
api/user/: models.py  serializers.py  urls.py  utils.py  views.py
apps/chat/: consumers.py  models.py  pagination.py  routing.py  serializers.py  urls.py  views.py
apps/shapeteam/: admin.py  apps.py  models.py  serializers.py  urls.py
apps/user/: models.py  serializers.py  urls.py  utils.py  views.py
core/: asgi.py  settings.py  socketauth.py  urls.py  wsgi.py
fixtures/shapeteam/: connection_fixture.json  day_exercise_fixture.json  day_training_fixture.json  daytraining_fixture.json  exercise_fixture.json  muscle_group_fixture.json  week_routine_fixture.json  weekroutine_fixture.json
fixtures/user/: user_fixture.json
shapeteam/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
shapeteam/fixtures/: chat_fixture.json  daytraining_fixture.json  exercise_fixture.json  exercise_ranking_fixture.json  name_exercise_fixture.json  user_fixture.json  weekroutine_fixture.json
shapeteam/migrations/: 0001_initial.py  0002_rename_message_chat_alter_nameexercise_description_and_more.py  0003_alter_gym_location.py
shapeteam/tests/: __init__.py  test_endpoints.py  test_models.py
(+80 files in other folders)
